--- a/frontend/src/components/Workplace/Workplace.css
+++ b/frontend/src/components/Workplace/Workplace.css
@@ -12,6 +12,7 @@ body {
     margin: 0;
     padding: 0;
     display: block;
+    
 }
 
 div{
@@ -190,8 +191,55 @@ hr {
 }
 
 
+.c-button--outline,
+.c-button--outline:link,
+.c-button--outline:visited {
+    color: rgba(var(--sk_primary_foreground, 29, 28, 29), 1);
+}
+
+.p-create_workspace_banner__button {
+    min-width: unset;
+}
+
+.c-button--medium {
+    font-size: 15px;
+    height: 40px;
+    min-width: 80px;
+    padding: 0 12px 1px;
+}
+
+.c-button--outline {
+    --saf-0: rgba(var(--sk_primary_foreground, 29, 28, 29), 0.3);
+    background: rgba(var(--sk_primary_background, 255, 255, 255), 1);
+    background-clip: padding-box;
+    border: 1px solid var(--saf-0);
+    font-weight: 700;
+    border-radius: 5px;
+    transition: all 80ms linear;
+}
+
+.p-create_workspace_banner {
+    align-items: center;
+    background-color: #f4ede480;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-left: 300px;
+    padding: 20px 24px 20px 16px;
+    width: 800px;
+
+}
+
+.align_items_center {
+    align-items: center;
+}
 
 
+.display_flex {
+    display: flex;
+}
 
 
 
