--- a/frontend/src/components/Workplace/Workplace.css
+++ b/frontend/src/components/Workplace/Workplace.css
@@ -12,6 +12,8 @@ body {
     margin: 0;
     padding: 0;
     display: block;
+    overflow-y: scroll;
+
     
 }
 
@@ -49,6 +51,7 @@ hr {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    overflow-y: scroll;
 }
 
 .p-refreshed_page__header {
@@ -118,6 +121,13 @@ hr {
     border-radius: 4px;
     box-shadow: 0 4px 12px #0000001a;
     width: 800px;
+    
+    
+}
+
+.p-expanding_workspace_list{
+    height: 300px;
+    overflow-y: scroll;
 }
 
 
@@ -240,6 +250,7 @@ hr {
 .display_flex {
     display: flex;
 }
+
 
 
 
