--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,20 @@
 /* TODO Add site wide styles */
+
+.user-logout{
+    color: red;
+    background-color: red;
+}
+
+.profile{
+    color: white;
+    background-color: blue;
+}
+
+.nav-login-button{
+    color: white;
+    background-color: purple;
+    width: 100px;
+    font-size: 10px;
+    height: 10px;
+    padding: 2px;
+}
