--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,10 +11,59 @@
 }
 
 .nav-login-button{
+    
     color: white;
     background-color: purple;
-    width: 100px;
+    width: 30px;
     font-size: 10px;
-    height: 10px;
-    padding: 2px;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    
+
+
+  
+}
+
+.fa-p{
+    margin-top: 10px;
+    margin-left: 13px;
+    font-weight: 900;
+}
+
+
+.profile-main-box{
+    display: flex;
+    flex-direction: column;
+    height: 303px;
+    width: 300px;
+    background-color: #F8F8F8;
+    border-radius: 6px;
+}
+
+.profile-username{
+    color: black;
+    font-size: 20px;
+    padding: 30px;
+    padding-left: 80px;
+    border-bottom: lightgray solid 1px;
+}
+
+
+.Logout{
+    color: black;
+    font-size: 20px;
+    
+    margin-top: 100px;
+    padding-left: 100px;
+    width: 100%;
+
+}
+
+.Logout:hover{
+    cursor: pointer;
+    background-color: #1163A3;
+    color: white;
+    border-radius: 3px;
+
 }
