--- a/frontend/src/components/Workplace/Workplace.css
+++ b/frontend/src/components/Workplace/Workplace.css
@@ -272,3 +272,11 @@ hr {
     margin-left: 10px;
     font-weight:800;
 }
+
+.add-workplace-button{
+    margin-left: 100px;
+}
+
+.p-workspace_info__icon{
+    margin-left: 10px;
+}
