--- a/frontend/src/components/CreateWorkspace/Messages.css
+++ b/frontend/src/components/CreateWorkspace/Messages.css
@@ -155,18 +155,16 @@ html {
 }
 
 form{
-    display: flex;
-    
-    flex-direction: column;
-    align-items: center;
-    margin-left: 50px ;
-    margin-top: 50px;
+  margin-top: 200px;
+  margin-right: 180px;
+  
 
 }
 
 .form-for-create-workplace{
-    margin-left: 250px;
-    margin-top: 350px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 input[type='text'] {
@@ -177,4 +175,8 @@ input[type='text'] {
 
 .fa-paper-plane-top{
     background-color: white;
+}
+
+.p-client_container{
+
 }
