--- a/frontend/src/components/Channels/Channel.css
+++ b/frontend/src/components/Channels/Channel.css
@@ -314,15 +314,24 @@ a{
     width: 100%;
     border-radius: 5px;
     height: 100%;
+
+    border: 1px solid rgba(21, 20, 21, .295);
+        border-radius: 8px;
+        margin: 0 16px 0 20px;
+        width: 100%;
 }
 
 
 .sender-form{
+    background: transparent;
+    border: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: 100%;
     max-width: 1000%;
+    
     
 }
 
@@ -350,6 +359,7 @@ a{
     height: 25px;
     width: 15px;
     margin: 0px;
+    
     font-weight: 0px;
     margin-left: 15px;
     min-width: 20px;
@@ -359,10 +369,14 @@ a{
 .send-message{
     margin-left: 10px;
     width: 80px;
+    background-color: #F8F8F8;
+    color: gray;
     
 }
 .message-input{
-    width: 900px;
+    width: 100%;
+    padding: 10px;
+    -webkit-appearance: none;
     
 }
 
@@ -696,4 +710,17 @@ a{
 
 .add-channel-modal-form button{
     margin-left: 140px;
+}
+
+.bottom-message{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px, 10px, 5px;
+}
+
+.send-message-button{
+    align-items: center;
+        border-radius: 4px;
+        display: flex;
+        opacity: .3;
 }
