--- a/frontend/src/components/Channels/Channel.css
+++ b/frontend/src/components/Channels/Channel.css
@@ -91,8 +91,10 @@ a{
     color: grey;
     text-decoration: none;
     top: 50px;
+    margin-top: 10px;
     height: 20px;
     padding: 10px;
+    padding-left: 20px;
     font-size: 20px;
 }
 
@@ -169,8 +171,31 @@ a{
     display: flex;
     align-items: left;
     width: 100%;
-    ;
+    
+}
 
+.selected-channel{
+
+       
+        
+        
+        text-decoration: none;
+            top: 50px;
+            padding: 5px;
+            margin-top: 10px;
+            font-size: 20px;
+        color: white;
+        background-color: #1163A3;
+        width: 100%;
+        padding-left: 30px;
+        /* margin-left: 30px; */
+
+}
+
+.stuff{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hashtag{
@@ -376,6 +401,7 @@ a{
 .message-input{
     width: 100%;
     padding: 10px;
+    border: none;
     -webkit-appearance: none;
     
 }
