--- a/frontend/src/components/Channels/Channel.css
+++ b/frontend/src/components/Channels/Channel.css
@@ -31,7 +31,9 @@ a{
 .message-sent{
     border-color: #350d36;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+   
+    justify-content: space-between;
     align-items: flex-start;
     padding: 10px 25px;
 }
@@ -325,9 +327,8 @@ a{
 .message-box{
     display: flex;
     padding: 0 25px 25px 0px;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
+    width: 135vh;
+    position: fixed;
     
 }
 
@@ -467,9 +468,10 @@ a{
 }
 
 .message-sent:hover .edit-delete{
-    display: block;
+    display: flex;
+    flex-direction: row;
     position: absolute;
-    right: 250px;
+   
     width: 50px;
     font-size: large;
     border: 1px solid black;
@@ -479,6 +481,9 @@ a{
     background-color: white;
 
 }
+
+
+
 
 .message-sent:hover{
     background-color: lightgray;
