--- a/frontend/src/components/Messaging/Messaging.css
+++ b/frontend/src/components/Messaging/Messaging.css
@@ -14,7 +14,7 @@
     
 }
 .message-input-messaging{
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     height: 20%;
 }
@@ -63,6 +63,7 @@
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
     margin-bottom: 20%;
+    cursor: pointer;
 }
 
 .channel-title-header{
